# PaperCovid19

./: main.py  pyproject.toml  requirements.txt
controlador/: modulo_api.py  modulo_coseno.py  modulo_jaccard.py  modulo_maquinavec.py  modulo_textblob.py  modulo_topicmo.py  modulo_tweets.py  modulo_voting.py  procesos.py
modelo/: dic_datasetGlobal.txt  dic_neg.txt  dic_posi.txt
static/color/: default.css
static/css/: overwrite.css  style.css
static/js/: scripts.js
templates/: LDA_Visualization.html  index.html
