[tool.poetry]
name = "papercovid19"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
wordcloud = "^1.8.0"
gensim = "^3.8.3"
pyldavis = "^2.1.2"
sklearn = "^0.0"
textblob = "^0.15.3"
tweepy = "^3.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
